--- a/src/projects/blackie-bot/package.json
+++ b/src/projects/blackie-bot/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.4.5",
     "emittery": "^0.13.1",
     "env-var": "^7.5.0",
+    "escape-string-regexp": "^4.0.0",
     "fs-extra": "^11.2.0",
     "html-to-text": "^9.0.5",
     "luxon": "^3.4.4",
